--- a/client/scss/components/_tabs.scss
+++ b/client/scss/components/_tabs.scss
@@ -92,6 +92,15 @@
             display: block;
         }
     }
+
+    .page-locked & {
+        cursor: not-allowed;
+        user-select: none;
+
+        > * {
+            pointer-events: none;
+        }
+    }
 }
 
 @include media-breakpoint-up(sm) {
