Split dropdowns.scss into multiple files

--- a/client/scss/objects/_objects.scss
+++ b/client/scss/objects/_objects.scss
@@ -5,3 +5,12 @@
     vertical-align: middle;
     line-height: 1.5;
 }
+
+
+// For dropdowns
+.o-icon {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+    margin-top: -0.25rem;
+}
