--- a/client/scss/elements/_elements.scss
+++ b/client/scss/elements/_elements.scss
@@ -21,3 +21,15 @@ body {
         visibility: hidden;
     }
 }
+
+hr {
+    border: 1px solid $color-grey-4;
+    border-width: 1px 0 0;
+    margin: 1.5em 0;
+}
+
+// general image style
+img {
+    max-width: 100%;
+    height: auto;
+}
