Make style lint happy

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -57,7 +57,7 @@ This is for resets and other rules that affect large collections of bare element
 * Changes to them should be very rare.
 */
 
-@import 'generic/generic';
+// @import 'generic/generic';
 
 
 /* ELEMENTS
