--- a/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -408,13 +408,13 @@ footer .preview {
             &_small-part {
                 // IE11 requires units on the flex basis. Unitless breaks.
                 // stylelint-disable-next-line length-zero-no-unit
-                flex: 1 0 0px;
+                flex: 1 0 0;
             }
 
             &_big-part {
                 // IE11 requires units on the flex basis. Unitless breaks.
                 // stylelint-disable-next-line length-zero-no-unit
-                flex: 5 0 0px;
+                flex: 5 0 0;
             }
         }
 
