--- a/wagtail/admin/templates/wagtailadmin/pages/action_menu/menu.html
+++ b/wagtail/admin/templates/wagtailadmin/pages/action_menu/menu.html
@@ -1,5 +1,5 @@
 {% if show_menu %}
-    <div class="dropdown-toggle icon icon-arrow-up"></div>
+    <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
     <ul role="menu">
         {% for item in rendered_menu_items %}{{ item }}{% endfor %}
     </ul>
