--- a/wagtail/contrib/modeladmin/templates/modeladmin/create.html
+++ b/wagtail/contrib/modeladmin/templates/modeladmin/create.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li class="actions">
                         {% block form_actions %}
-                            <div class="dropdown dropup dropdown-button match-width">
+                            <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                                 <button type="submit" class="button action-save button-longrunning" tabindex="3" data-clicked-text="{% trans 'Saving…' %}">
                                     <span class="icon icon-spinner"></span><em>{% trans 'Save' %}</em>
                                 </button>
