--- a/wagtail/contrib/settings/templates/wagtailsettings/edit.html
+++ b/wagtail/contrib/settings/templates/wagtailsettings/edit.html
@@ -32,7 +32,7 @@
 
         <footer>
             <ul>
-                <li class="actions dropdown dropup match-width">
+                <li class="actions c-large-dropdown c-large-dropdown--dropup c-large-dropdown--match-width">
                     <button type="submit" class="button button-longrunning" tabindex="3" data-clicked-text="{% trans 'Saving…' %}"><span class="icon icon-spinner"></span><em>{% trans 'Save' %}</em></button>
                 </li>
             </ul>
