--- a/wagtail/contrib/styleguide/templates/wagtailstyleguide/base.html
+++ b/wagtail/contrib/styleguide/templates/wagtailstyleguide/base.html
@@ -546,9 +546,9 @@
 
             <div class="row">
                 <div class="col3">
-                    <div class="dropdown dropdown-button match-width">
+                    <div class="c-large-dropdown c-large-dropdown--button c-large-dropdown--match-width">
                         <input type="button" value="drop down" class="button" />
-                        <div class="dropdown-toggle icon icon-arrow-down"></div>
+                        <div class="c-large-dropdown__toggle icon icon-arrow-down"></div>
                         <ul role="menu">
                             <li><a href="#">items should not exceed button width</a></li>
                             <li><a href="#">item 2</a></li>
@@ -557,9 +557,9 @@
                 </div>
 
                 <div class="col3">
-                    <div class="dropdown dropdown-button">
+                    <div class="c-large-dropdown c-large-dropdown--button">
                         <input type="button" value="drop down" class="button" />
-                        <div class="dropdown-toggle icon icon-arrow-down"></div>
+                        <div class="c-large-dropdown__toggle icon icon-arrow-down"></div>
                         <ul role="menu">
                             <li><a href="#">Items in this list do not match button width</a></li>
                             <li><a href="#">item 2</a></li>
@@ -568,9 +568,9 @@
                 </div>
 
                 <div class="col3">
-                    <div class="dropdown dropup dropdown-button match-width">
+                    <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                         <input type="button" value="drop up" class="button" />
-                        <div class="dropdown-toggle icon icon-arrow-up"></div>
+                        <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
                         <ul role="menu">
                             <li><a href="#">item 1</a></li>
                             <li><a href="#">item 2</a></li>
@@ -579,9 +579,9 @@
                 </div>
 
                 <div class="col3">
-                    <div class="dropdown dropup dropdown-button match-width">
+                    <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                         <button value="drop up" class="button icon icon-view">icon dropup</button>
-                        <div class="dropdown-toggle icon icon-arrow-up"></div>
+                        <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
                         <ul role="menu">
                             <li><a href="#">item 1</a></li>
                             <li><a href="#">item 2</a></li>
@@ -593,9 +593,9 @@
             <div class="row">
                 <br />
                 <div class="col3">
-                    <div class="dropdown dropdown-button match-width">
+                    <div class="c-large-dropdown c-large-dropdown--button c-large-dropdown--match-width">
                         <a href="#" class="button" value="drop down">Link button</a>
-                        <div class="dropdown-toggle icon icon-arrow-down"></div>
+                        <div class="c-large-dropdown__toggle icon icon-arrow-down"></div>
                         <ul role="menu">
                             <li><a href="#">items should not exceed button width</a></li>
                             <li><a href="#">item 2</a></li>
