--- a/wagtail/admin/templates/wagtailadmin/pages/create.html
+++ b/wagtail/admin/templates/wagtailadmin/pages/create.html
@@ -26,7 +26,7 @@
         <footer>
             <ul>
                 <li class="actions">
-                    <div class="dropdown dropup dropdown-button match-width">
+                    <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                         <button type="submit" class="button action-save button-longrunning" tabindex="3" data-clicked-text="{% trans 'Saving…' %}"><span class="icon icon-spinner"></span><em>{% trans 'Save draft' %}</em></button>
                         {{ action_menu.render_html }}
                     </div>
@@ -35,9 +35,9 @@
                 <li class="preview">
                     {% trans 'Preview' as preview_label %}
                     {% if preview_modes|length > 1 %}
-                        <div class="dropdown dropup dropdown-button match-width">
+                        <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                             {% include "wagtailadmin/pages/_preview_button_on_create.html" with label=preview_label icon=1 %}
-                            <div class="dropdown-toggle icon icon-arrow-up"></div>
+                            <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
                             <ul role="menu">
                                 {% for mode_name, mode_display_name in preview_modes %}
                                     <li>
