--- a/wagtail/admin/templates/wagtailadmin/pages/edit.html
+++ b/wagtail/admin/templates/wagtailadmin/pages/edit.html
@@ -37,7 +37,7 @@
         <footer>
             <ul>
                 <li class="actions">
-                    <div class="dropdown dropup dropdown-button match-width {% if is_revision %}warning{% endif %}">
+                    <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width {% if is_revision %}c-large-dropdown--warning{% endif %}">
                         <button type="submit" class="button action-save button-longrunning {% if is_revision %}warning{% endif %}" tabindex="3" data-clicked-text="{% trans 'Saving…' %}" {% if page.locked %}disabled {% endif %}><span class="icon icon-spinner"></span><em>{% if page.locked %}{% trans 'Page locked' %}{% else %}{% if is_revision %}{% trans 'Replace current draft' %}{% else %}{% trans 'Save draft' %}{% endif %}{% endif %}</em></button>
 
                         {{ action_menu.render_html }}
@@ -47,9 +47,9 @@
                 <li class="preview">
                     {% trans 'Preview' as preview_label %}
                     {% if preview_modes|length > 1 %}
-                        <div class="dropdown dropup dropdown-button match-width">
+                        <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                             {% include "wagtailadmin/pages/_preview_button_on_edit.html" with label=preview_label icon=1 %}
-                            <div class="dropdown-toggle icon icon-arrow-up"></div>
+                            <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
                             <ul role="menu">
                                 {% for mode_name, mode_display_name in preview_modes %}
                                     <li>
