--- a/wagtail/contrib/modeladmin/templates/modeladmin/edit.html
+++ b/wagtail/contrib/modeladmin/templates/modeladmin/edit.html
@@ -4,13 +4,13 @@
 {% block form_action %}{{ view.edit_url }}{% endblock %}
 
 {% block form_actions %}
-    <div class="dropdown dropup dropdown-button match-width">
+    <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
         <button type="submit" class="button action-save button-longrunning" tabindex="3" data-clicked-text="{% trans 'Saving…' %}" {% if page.locked %}disabled {% endif %}>
             <span class="icon icon-spinner"></span><em>{% trans 'Save' %}</em>
         </button>
 
         {% if user_can_delete %}
-            <div class="dropdown-toggle icon icon-arrow-up"></div>
+            <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
             <ul role="menu">
                 <li><a href="{{ view.delete_url }}" class="shortcut">{% trans "Delete" %}</a></li>
             </ul>
