--- a/wagtail/snippets/templates/wagtailsnippets/snippets/edit.html
+++ b/wagtail/snippets/templates/wagtailsnippets/snippets/edit.html
@@ -19,11 +19,11 @@
                 <footer>
                     <ul>
                         <li class="actions">
-                            <div class="dropdown dropup dropdown-button match-width">
+                            <div class="c-large-dropdown c-large-dropdown--dropup c-large-dropdown--button c-large-dropdown--match-width">
                                 <button type="submit" class="button action-save button-longrunning" tabindex="3" data-clicked-text="{% trans 'Saving…' %}" {% if page.locked %}disabled {% endif %}>
                                     <span class="icon icon-spinner"></span><em>{% trans 'Save' %}</em>
                                 </button>
-                                <div class="dropdown-toggle icon icon-arrow-up"></div>
+                                <div class="c-large-dropdown__toggle icon icon-arrow-up"></div>
                                 <ul role="menu">
                                     <li><a href="{% url 'wagtailsnippets:delete' model_opts.app_label model_opts.model_name instance.pk|admin_urlquote %}" class="shortcut">{% trans "Delete" %}</a></li>
                                 </ul>
